diplom/service.yml
apiVersion: v1
kind: Service
metadata:
  name: myapp
spec:
#  type: NodePort
  selector:
    app: myapp
  ports:
    - name: http
      port: 80
      targetPort: myapphttp
#      nodePort: 30001
