diplom/svc_for_ingress.yml
apiVersion: v1
kind: Service
metadata:
  name: myappfornginx
spec:
  type: NodePort
  selector:
    app: myapp
  ports:
    - name: http
      port: 80
      targetPort: myapp
      nodePort: 30080
