diplom/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp
spec:
  ingressClassName: nginx
  rules:
    - host: myapp.net
      http:
        paths:
          #- path: /
          - pathType: Prefix
            backend:
              service:
                name: myapp
                port:
                  number: 80
            path: /myapp
